# faker-events

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  setup.cfg  setup.py  test  tox.ini  trial.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-app.yml  python-publish.yml
demo/: consumer.py  docker-compose.yml  producer.py
docs/: Example.MD
faker_events/: __init__.py  __main__.py  edgecases.py  events.py  example.py  handlers.py  profiles.py
scripts/: faker-events
src/faker_events/: __main__.py  handlers.py  profiles.py  text_color.py
tests/: handlers.py  test_events.py  test_handlers.py  test_main.py  test_profiles.py  test_text_color.py
