[metadata]
name = Faker-Events
version = file: VERSION
description = Generates Events with formatted fake data for streams.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnbrandborg/faker-events
author = John Brandborg
author_email = john.brandborg+pypi@pm.me
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = faker events stream data test generator
project_urls =
    Source=https://github.com/johnbrandborg/faker-events
    Tracker=https://github.com/johnbrandborg/faker-events/issues

[options]
packages = find:
install_requires =
    faker
    croniter
python_requires = >=3.6
scripts =
    scripts/faker-events

[options.extras_require]
kafka = kafka-python
kinesis = boto3
develop =
    flake8
    pytest
    pytest-cov

[options.packages.find]
exclude =
    docs
    tests

[tool:pytest]
addopts= --cov=. tests/

[coverage:run]
omit =
    env/*
    .env/*
    venv/*
    tests/*
    setup.py

[coverage:xml]
output = coverage.xml

[coverage:report]
show_missing = true
fail_under = 60
exclude_lines =
    ^if __name__ ==
    ^\s*except KeyboardInterrupt

[flake8]
per-file-ignores = __init__.py:F401
